--- a/style.css
+++ b/style.css
@@ -94,7 +94,8 @@ footer {
     background-image: url(./Assets/mohamed-masaau-nfF5-G6cFwY-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 110vh;
+    background-position: center;
+    height: 100vh;
     text-align: right;
     margin-top: -80px;
     display: flex;
@@ -104,12 +105,6 @@ footer {
 
 .introduction {
     color: #fff;
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    width: fit-content;
     max-height: 500px;
     display: flex;
     flex-direction: column;
@@ -121,9 +116,34 @@ footer {
 }
 
 .introduction h1 {
-    font-size: 20vw;
+    font-size: 15vw;
     margin-top: -120px;
     padding: 30px;
+}
+
+@media (max-width: 768px) {
+    .introduction-container {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+        padding-top: 10vh;
+    }
+
+    .introduction {
+        align-items: center;
+        text-align: center;
+        max-width: 90%;
+        justify-content: flex-start;
+    }
+
+    .introduction h2 {
+        font-size: 2rem;
+    }
+
+    .introduction h1 {
+        font-size: clamp(5rem, 10vw, 8rem);
+        margin-top: -50px;
+    }
 }
 
 footer .taniti {
@@ -263,10 +283,6 @@ footer a {
     max-width: 48% !important;
     }
 
-    .introduction {
-        max-height: 300px;
-    }
-
     .about-section {
         grid-template-columns: 1fr;
     }
@@ -274,6 +290,11 @@ footer a {
     .section-img {
         margin: auto;
     }
+
+    .visitors-page {
+        grid-template-columns: 1fr;
+    }
+
 
 }
 
